--- a/package.json
+++ b/package.json
@@ -1,48 +1,67 @@
 {
-    "name": "dengyuxi.me",
-    "version": "0.0.0",
-    "scripts": {
-        "dev": "vite --port 3333 --open",
-        "build": "cross-env NODE_ENV=production vite-ssg build",
-        "serve": "vite preview"
-    },
-    "dependencies": {
-        "@antv/g2plot": "^2.4.1",
-        "@vueuse/core": "^7.3.0",
-        "@vueuse/head": "^0.7.5",
-        "dayjs": "^1.10.7",
-        "live2d-widget": "^3.1.4",
-        "nprogress": "^0.2.0",
-        "prism-theme-vars": "^0.2.2",
-        "typed.js": "^2.0.12",
-        "vue": "^3.2.20",
-        "vue-router": "^4.0.11"
-    },
-    "devDependencies": {
-        "@iconify/json": "^1.1.443",
-        "@types/diacritics": "^1.3.1",
-        "@types/fs-extra": "^9.0.13",
-        "@types/markdown-it-link-attributes": "^3.0.1",
-        "@types/node": "^17.0.0",
-        "@types/nprogress": "^0.2.0",
-        "@vitejs/plugin-vue": "^2.0.1",
-        "@vue/compiler-sfc": "^3.2.26",
-        "@vue/server-renderer": "^3.2.31",
-        "cross-env": "^7.0.3",
-        "diacritics": "^1.3.0",
-        "gray-matter": "^4.0.3",
-        "markdown-it-anchor": "^8.4.1",
-        "markdown-it-link-attributes": "^3.0.0",
-        "markdown-it-prism": "^2.2.1",
-        "typescript": "^4.5.4",
-        "vite": "^2.7.3",
-        "vite-plugin-components": "^0.10.4",
-        "vite-plugin-icons": "^0.5.1",
-        "vite-plugin-md": "^0.11.6",
-        "vite-plugin-pages": "^0.19.4",
-        "vite-plugin-windicss": "^1.5.4",
-        "vite-ssg": "^0.17.1",
-        "vue-tsc": "^0.29.8",
-        "windicss": "^3.3.0"
-    }
+  "name": "dengyuxi.me",
+  "version": "0.0.0",
+  "packageManager": "pnpm@7.5.0",
+  "scripts": {
+    "dev": "vite --port 3333 --open",
+    "build": "cross-env NODE_ENV=production vite-ssg build",
+    "serve": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
+  "dependencies": {
+    "@antv/g2plot": "^2.4.20",
+    "@vueuse/core": "^8.9.0",
+    "@vueuse/head": "^0.7.6",
+    "dayjs": "^1.11.3",
+    "live2d-widget": "^3.1.4",
+    "nprogress": "^0.2.0",
+    "prism-theme-vars": "^0.2.3",
+    "typed.js": "^2.0.12",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.1"
+  },
+  "devDependencies": {
+    "@iconify/json": "^2.1.73",
+    "@lightwing/eslint-config": "^0.0.3",
+    "@types/diacritics": "^1.3.1",
+    "@types/fs-extra": "^9.0.13",
+    "@types/markdown-it": "^12.2.3",
+    "@types/markdown-it-link-attributes": "^3.0.1",
+    "@types/node": "^18.0.3",
+    "@types/nprogress": "^0.2.0",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "cross-env": "^7.0.3",
+    "diacritics": "^1.3.0",
+    "eslint": "^8.19.0",
+    "gray-matter": "^4.0.3",
+    "happy-dom": "^6.0.2",
+    "lint-staged": "^13.0.3",
+    "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.4",
+    "markdown-it-link-attributes": "^4.0.0",
+    "markdown-it-prism": "^2.2.4",
+    "pnpm": "^7.5.0",
+    "sass": "^1.53.0",
+    "simple-git-hooks": "^2.8.0",
+    "typescript": "^4.7.4",
+    "unplugin-auto-import": "^0.9.2",
+    "unplugin-icons": "^0.14.7",
+    "unplugin-vue-components": "^0.21.1",
+    "vite": "^2.9.13",
+    "vite-plugin-md": "^0.18.1",
+    "vite-plugin-pages": "^0.25.0",
+    "vite-plugin-windicss": "^1.8.6",
+    "vite-ssg": "^0.20.2",
+    "vue-tsc": "^0.38.3",
+    "windicss": "^3.5.6"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,vue,md,json}": [
+      "eslint --fix"
+    ]
+  }
 }
