--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "rewrites": [
         {
-            "source": "/:path*",
-            "destination": "/index.html"
+            "destination": "/index.html",
+            "source": "/(.*)"
         }
     ]
 }
