--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "rewrites": [
         {
-            "destination": "/index.html",
-            "source": "/(.*)"
+            "source": "/*",
+            "destination": "/index.html"
         }
     ]
 }
