fix:use rewrite

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-    "redirects": [{
+    "rewrites": [{
         "source": "/(.*)",
-        "destination": "/"
+        "destination": "/index.html"
     }]
 }
