--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@7.5.0",
   "scripts": {
     "dev": "vite --port 3333 --open",
-    "build": "cross-env NODE_ENV=production vite-ssg build",
+    "build": "cross-env NODE_ENV=production vite-ssg build && esno ./scripts/rss.ts",
     "serve": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
@@ -34,6 +34,10 @@
     "cross-env": "^7.0.3",
     "diacritics": "^1.3.0",
     "eslint": "^8.19.0",
+    "esno": "^0.16.3",
+    "fast-glob": "^3.2.12",
+    "feed": "^4.2.2",
+    "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
     "happy-dom": "^6.0.2",
     "lint-staged": "^13.0.3",
